--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "onlineshop",
+  "name": "fashion_online",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -9,11 +9,13 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
-    "hbs": "~4.0.4",
+    "hbs": "^4.2.0",
     "http-errors": "~1.6.3",
-    "morgan": "~1.9.1"
-  },
-  "devDependencies": {
+    "morgan": "~1.9.1",
+    "pg": "^8.7.1",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.12.0-alpha.1",
+    "dotenv": "^10.0.0",
     "nodemon": "^2.0.15"
   }
 }
