Change env to atlas

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DB_CONNECT = 'mongodb://localhost:27017/fashionShop';
+DB_CONNECT = 'mongodb+srv://web:123@webfashion.f0fey.mongodb.net/db_fashionshop?retryWrites=true&w=majority';
