--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 DB_CONNECT = 'mongodb+srv://web:123@webfashion.f0fey.mongodb.net/db_fashionshop?retryWrites=true&w=majority';
+SESSION_SECRET= FASHIONSHOP
