refactor, edit login register, add nodmailer to verify

--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 DB_CONNECT = mongodb+srv://web:123@webfashion.f0fey.mongodb.net/db_fashionshop?retryWrites=true&w=majority
 SESSION_SECRET= FASHIONSHOP
+
+SHOP_GMAIL_USERNAME =  LuxuryFashionShoppp@gmail.com
+SHOP_GMAIL_PASSWORD = fashionshop123
