--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mongoose": "^6.0.13",
     "mongoose-slug-generator": "^1.0.4",
     "morgan": "~1.9.1",
+    "nodemailer": "^6.7.2",
     "nodemon": "^2.0.15",
     "passport": "^0.5.0",
     "passport-local": "^1.0.0"
